--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,24 +1,32 @@
 server.port=9090
+#server.port=8080
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
+spring.jpa.show-sql=true
+#spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.time_zone=UTC
 logging.level.org.springframework.orm.jpa=INFO
 logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-spring.datasource.driver-class-name=org.postgresql.Driver
+#---
+spring.datasource.driverClassName=org.postgresql.Driver
+
 spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=dbuser
-spring.datasource.password=12345
+#spring.datasource.url=jdbc:postgresql://localhost:6432/shareit
+#spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
 
-hibernate.show_sql=true
-hibernate.jdbc.time_zone=UTC
+spring.jpa.properties.hibernate.default_schema=public
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 
+#---
 spring.config.activate.on-profile=test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=dbuser
-spring.datasource.password=12345
+spring.datasource.username=shareit
+spring.datasource.password=shareit
