--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.datasource.username=shareit
 spring.datasource.password=shareit
 
 #---
-spring.config.activate.on-profile=test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+#spring.config.activate.on-profile=test
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.url=jdbc:h2:mem:shareit
+#spring.datasource.username=shareit
+#spring.datasource.password=shareit
